--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Arshan Munif # your name (or website title) here
 logo: "/images/headshot.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+
   <br>
-  AI/ML professional with 4 years of experience working as an analyst and project manager across consumer packaged goods, marketing, and tech sectors. Worked wtih Fortune 500 firms such as Salesforce and Colgate Palmolive.
+  **AI/ML professional with 4 years of experience working as an analyst and project manager across consumer packaged goods, marketing, and tech sectors. Worked wtih Fortune 500 firms such as Salesforce and Colgate Palmolive.**
   <br><br>
   Currently finsihing up an MSc. in Artificial Intelligence at Brunel University London. Previously obtained BSc. in Petroleum Engineering and MBA from USA. 
   <br><br>
