fixed spelling mistake

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>
   AI/ML professional with 4 years of experience working as an analyst and project manager across consumer packaged goods, marketing, and tech sectors. Worked wtih Fortune 500 firms such as Salesforce and Colgate Palmolive.
   <br><br>
-  Currently finsihing up an MSc. in Artificial Intelligence at Brunel University London. Previously obtained BSc. in Petroleum Engineering and MBA from USA. 
+  Finishing up an MSc. in Artificial Intelligence at Brunel University London. Previously obtained BSc. in Petroleum Engineering and MBA from USA. 
   <br><br>
   <a href="https://www.linkedin.com/in/amunif/">View My LinkedIn Profile</a> 
   
