updated intro description

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ logo: "/images/headshot.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
 
   <br>
-  AI/ML professional with 4 years of experience working as an analyst and project manager across consumer packaged goods, marketing, and IT sectors. Worked wtih Fortune 500 firms such as Salesforce, Colgate Palmolive and Cognizant.
+  AI/ML professional with 4 years of experience working as an analyst and project manager across consumer packaged goods, marketing, and IT sectors. Worked wtih Fortune 500 firms such as Salesforce and Colgate Palmolive.
   <br><br>
-  Finishing up an MSc. in Artificial Intelligence at Brunel University London. Previously obtained BSc. in Petroleum Engineering and MBA from USA. 
+  Educational Qualifications: MSc. Artificial Intelligence, Master of Business Administration (MBA), and BSc. Petroleum Engineering 
   <br><br>
   <a href="https://www.linkedin.com/in/amunif/">View My LinkedIn Profile</a> 
   
