--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/headshot.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
 
   <br>
-  AI/ML professional with 4 years of experience working as an analyst and project manager across consumer packaged goods, marketing, and IT sectors. Worked wtih Fortune 500 firms such as Salesforce and Colgate Palmolive.
+  Professional with 4 years of experience in analytics and project management. Worked wtih Fortune 500 firms such as Salesforce and Colgate Palmolive.
   <br><br>
   Educational Qualifications: MSc. Artificial Intelligence, Master of Business Administration (MBA), and BSc. Petroleum Engineering 
   <br><br>
