--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ logo: "/images/headshot_small.jpeg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
 
   <br>
-  Professional with 4 years of experience in analytics and project management. Worked wtih Fortune 500 firms such as Salesforce and Colgate Palmolive.
+  Data Scientist with 7+ years of experience in analytics, project, and stakeholder management. Worked for Fortune 500 companies such as Salesforce, Cognizant, and Colgate Palmolive.
   <br><br>
-  Educational Qualifications: MSc. Artificial Intelligence, Master of Business Administration (MBA), and BSc. Petroleum Engineering 
+  Education: MSc Artificial Intelligence, Master of Business Administration (MBA), and BSc Petroleum Engineering 
   <br><br>
   <a href="https://www.linkedin.com/in/amunif/">View My LinkedIn Profile</a> 
   
